syntax = "proto3";

option java_package = "org.example.grpc";
option java_outer_classname = "BettingProto";

service BettingService {
  rpc OfferBet (BetRequest) returns (BetResponse);
  rpc PlaceBet (PlaceBetRequest) returns (PlaceBetResponse);
  rpc CheckOutcome (CheckOutcomeRequest) returns (CheckOutcomeResponse);
  // Add more services as needed
}

message BetRequest {
  string bookmakerId = 1;  // New field to identify the bookmaker
  string name = 2;
  string event = 3;
  string oddsA = 4;
  string oddsDraw = 5;
  string oddsB = 6;
  double maxSum = 7;
}

message BetResponse {
  string message = 1;
}

message PlaceBetRequest {
  string bettorName = 1;
  string event = 2;
  string outcome = 3;
  string amount = 4;
}

message PlaceBetResponse {
  string message = 1;
}

message CheckOutcomeRequest {
  string event = 1;
  string outcome = 2;
  string amount = 3;
}

message CheckOutcomeResponse {
  string message = 1;
}
